[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "ulid-python"
description = "ULID (Universally Unique Lexicographically Sortable Identifier) implementation for Python - a better alternative to UUIDv4"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Yoseph Bernandus"}]
license = {file = "LICENSE"}
homepage = "https://github.com/yosephbernandus/ulid-python"
repository = "https://github.com/yosephbernandus/ulid-python"
keywords = ["ulid", "uuid", "identifier", "sortable", "rust"]
dependencies = [
    "typing_extensions; python_version<'3.10'",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
]
dev = [
    "pytest>=6.0",
    "ruff",
]
[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"

[dependency-groups]
test = [
    "pytest>=8.3.5",
]
